[package]
name = "vacuuminator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.7.0"
hound = "3.5.0"
itertools = "0.10.5"
symphonia = "0.5.3"
symphonia-core = "0.5.3"

[profile.dev]
strip = "symbols"
